--- a/style2.css
+++ b/style2.css
@@ -43,6 +43,7 @@ img {
 }
 
 .navbarr .logo-wrapperr {
+    padding-top: 10px;
     height: 29px;
     overflow: hidden;
     -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, 0.5) 30%, #000000 50%, rgba(0, 0, 0, 0.5) 70%);
@@ -140,7 +141,10 @@ header{
 .title{
     font-size: xx-large;
 }
-
+header .featured__controls{
+    text-decoration: none;
+    list-style: none;
+}
 .listProduct .item{
     transition: 0.5s;
     box-shadow: #000000;
