--- a/style2.css
+++ b/style2.css
@@ -1,15 +1,14 @@
-body{
+body {
     margin: 0;
-	font-family: "Cairo", sans-serif;
+    font-family: "Cairo", sans-serif;
     background-color: #000000;
 }
+
 html {
     scroll-behavior: smooth;
 }
 
-* 
-
-p {
+* p {
     font-family: 'Jost', sans-serif;
     font-size: 16px;
     font-weight: 400;
@@ -71,8 +70,6 @@ img {
 
 }
 
-
-
 .navbarr .navbar-links {
     display: flex;
     align-items: center;
@@ -87,7 +84,8 @@ img {
     color: rgb(200, 200, 200);
     text-decoration: none;
 }
-.navbar-links li{
+
+.navbar-links li {
     list-style: none;
 }
 
@@ -95,18 +93,18 @@ img {
     color: rgb(255, 255, 255);
 
 }
-@keyframes shine
-{
-    0%
-    {
+
+@keyframes shine {
+    0% {
         -webkit-mask-position: 150%;
     }
-    100%
-    {
+
+    100% {
         -webkit-mask-position: -50%;
     }
 }
-.container{
+
+.container {
     padding-top: 100px;
     margin: auto;
     width: 1200px;
@@ -114,22 +112,25 @@ img {
     text-align: center;
     transition: transform .5s;
 }
-svg{
+
+svg {
     width: 30px;
 }
-header{
+
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px 0;
 }
-.icon-cart{
+
+.icon-cart {
     position: relative;
     transition: 0.5s;
     color: #fff;
 }
 
-.icon-cart span{
+.icon-cart span {
     position: absolute;
     background-color: red;
     width: 30px;
@@ -142,15 +143,18 @@ header{
     top: 50%;
     right: -20px;
 }
-.title{
+
+.title {
     font-size: xx-large;
     color: #fff;
 }
-header .featured__controls{
+
+header .featured__controls {
     text-decoration: none;
     list-style: none;
 }
-.listProduct .item{
+
+.listProduct .item {
     overflow: hidden;
     transition: 0.7s;
     box-shadow: #000000;
@@ -160,38 +164,42 @@ header .featured__controls{
 }
 
 
-.listProduct .item:hover{
+.listProduct .item:hover {
     scale: 110%;
     height: 325px;
     z-index: 5;
 }
 
-.listProduct .item img{
+.listProduct .item img {
     width: 90%;
     filter: drop-shadow(0 50px 20px #0009);
 }
-.listProduct{
+
+.listProduct {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 20px;
 }
-.listProduct .item{
+
+.listProduct .item {
     background-color: #EEEEE6;
     padding: 20px;
     border-radius: 20px;
 }
-.listProduct .item h2{
+
+.listProduct .item h2 {
     font-weight: 500;
     font-size: large;
 }
-.listProduct .item .price{
+
+.listProduct .item .price {
     letter-spacing: 3px;
     font-size: large;
     font-weight: 100;
     font: optional;
 }
 
-.listProduct .item button.addCart{
+.listProduct .item button.addCart {
     background-color: #353432;
     color: #eee;
     border: none;
@@ -200,13 +208,14 @@ header .featured__controls{
     border-radius: 20px;
     transition: 0.5s;
 }
-.listProduct .item button.addCart:hover{
+
+.listProduct .item button.addCart:hover {
     scale: 105%;
     background-color: lightblue;
     color: #000000;
 }
 
-.listProduct .item button.whatsappmsg{
+.listProduct .item button.whatsappmsg {
     background-color: #209e14;
     color: #eee;
     border: none;
@@ -219,7 +228,7 @@ header .featured__controls{
 
 
 /* cart */
-.cartTab{
+.cartTab {
     width: 400px;
     background-color: #353432;
     color: #eee;
@@ -231,42 +240,51 @@ header .featured__controls{
     grid-template-rows: 70px 1fr 70px;
     transition: .5s;
 }
-body.showCart .cartTab{
+
+body.showCart .cartTab {
     right: 0;
 }
-body.showCart .container{
+
+body.showCart .container {
     transform: translateX(-250px);
 }
-.cartTab h1{
+
+.cartTab h1 {
     padding: 20px;
     margin: 0;
     font-weight: 300;
 }
-.cartTab .btn{
+
+.cartTab .btn {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
-.cartTab button{
+
+.cartTab button {
     background-color: #E8BC0E;
     border: none;
     font-family: Poppins;
     font-weight: 500;
     cursor: pointer;
 }
-.cartTab .close{
+
+.cartTab .close {
     background-color: #eee;
 }
-.listCart .item img{
+
+.listCart .item img {
     width: 100%;
 }
-.listCart .item{
+
+.listCart .item {
     display: grid;
     grid-template-columns: 70px 150px 50px 1fr;
     gap: 10px;
     text-align: center;
     align-items: center;
 }
-.listCart .quantity span{
+
+.listCart .quantity span {
     display: inline-block;
     width: 25px;
     height: 25px;
@@ -275,67 +293,74 @@ body.showCart .container{
     color: #555;
     cursor: pointer;
 }
-.listCart .quantity span:nth-child(2){
+
+.listCart .quantity span:nth-child(2) {
     background-color: transparent;
     color: #eee;
     cursor: auto;
 }
-.listCart .item:nth-child(even){
+
+.listCart .item:nth-child(even) {
     background-color: #eee1;
 }
-.listCart{
+
+.listCart {
     overflow: auto;
 }
-.listCart::-webkit-scrollbar{
+
+.listCart::-webkit-scrollbar {
     width: 0;
 }
+
 @media only screen and (max-width: 992px) {
-    .listProduct{
+    .listProduct {
         grid-template-columns: repeat(3, 1fr);
         height: 200px;
     }
 }
 
 @media only screen and (max-width: 1024px) {
-    .listProduct{
-        grid-template-columns: repeat(3,1fr);
+    .listProduct {
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
 
 /* mobile */
 @media only screen and (max-width: 768px) {
-    .listProduct{
+    .listProduct {
         grid-template-columns: repeat(3, 1fr);
     }
 }
 
 @media only screen and (max-width: 540px) {
-    .listProduct{
+    .listProduct {
         grid-template-columns: repeat(2, 1fr);
     }
-    .listProduct .item{
+
+    .listProduct .item {
         height: 235px;
     }
 }
 
 @media only screen and (max-width: 480px) {
-    .listProduct .item{
+    .listProduct .item {
         height: 210px;
     }
-    .listProduct .item:hover{
+
+    .listProduct .item:hover {
         height: 300px;
     }
 }
 
 @media only screen and (max-width: 429px) {
-    .listProduct .item{
-        height:200px ;
+    .listProduct .item {
+        height: 200px;
     }
 }
 
 @media only screen and (max-width: 418px) {
-    .listProduct .item{
-        height:200px ;
+    .listProduct .item {
+        height: 200px;
     }
 }
