--- a/style2.css
+++ b/style2.css
@@ -217,15 +217,18 @@ header .featured__controls {
 
 .listProduct .item button.whatsappmsg {
     background-color: #209e14;
-    color: #eee;
     border: none;
     padding: 5px 10px;
     margin-top: 10px;
     border-radius: 20px;
     transition: 0.5s;
+
 }
 
-
+.listProduct .item button.whatsappmsg a{
+    color: white;
+    text-decoration: none;
+}
 
 /* cart */
 .cartTab {
