--- a/style2.css
+++ b/style2.css
@@ -107,7 +107,7 @@ img {
 .container {
     padding-top: 100px;
     margin: auto;
-    width: 1200px;
+    width: 1000px;
     max-width: 90vw;
     text-align: center;
     transition: transform .5s;
@@ -168,16 +168,29 @@ header .featured__controls {
     scale: 110%;
     height: 290px;
     z-index: 5;
+    filter: drop-shadow(0 50px 20px #0009);
+    filter: blur(100);
+}
+
+.listProduct .buttons{
+    scale: 0%;
+    transition: 0.5s;
+    transform: scaley(100px);
+}
+
+.listProduct .item:hover .buttons{
+    scale: 100%;
+    transform: scaley(400px);
 }
 
 .listProduct .item img {
-    width: 90%;
+    width: 80%;
     filter: drop-shadow(0 50px 20px #0009);
 }
 
 .listProduct {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(5, 5fr);
     gap: 20px;
 }
 
@@ -189,13 +202,16 @@ header .featured__controls {
 
 .listProduct .item h4 {
     font-size: 16px;
+    padding-bottom: 0px;
 }
 
 .listProduct .item .price {
     letter-spacing: 3px;
-    font-size: large;
-    font-weight: 100;
-    font: optional;
+    padding-top: 0px;
+}
+
+.listProduct .item button{
+    margin-top: 20px;
 }
 
 .listProduct .item button.addCart {
