--- a/style2.css
+++ b/style2.css
@@ -129,7 +129,9 @@ header {
     transition: 0.5s;
     color: #fff;
 }
-
+.icon-cart i{
+    scale: 200px;
+}
 .icon-cart span {
     position: absolute;
     background-color: red;
@@ -165,7 +167,7 @@ header .featured__controls {
 
 
 .listProduct .item:hover {
-    scale: 120%;
+    scale: 115%;
     z-index: 5;
     filter: drop-shadow(20px 50px 50px rgba(0, 0, 0, 0.6));
     filter: ;
@@ -222,7 +224,7 @@ header .featured__controls {
 
 .listProduct .item button.addCart:hover {
     background-color: lightblue;
-    color: #000000;
+    color: #ff0000;
     scale: 110%;
     cursor: pointer;
 }
