--- a/style2.css
+++ b/style2.css
@@ -279,7 +279,7 @@ header .featured__controls {
     display: grid;
     grid-template-rows: 70px 1fr 70px;
     transition: .5s;
-    height: 500px;
+    height: px;
     z-index: 10;
 }
 
@@ -371,11 +371,13 @@ body.showCart .container {
 }
 
 form{
-    width: 390px;
+    width: 400px;
     margin-top: 0%;
   margin: 15px 5px;
   font-size: 16px;
   background: #353432;
+  border: none;
+  outline: none;
 }
 form h1{
   text-align: center;
@@ -383,6 +385,7 @@ form h1{
 form label{
   display: block;
   margin-bottom: 5px;
+  border: none;
 }
 form input, form textarea{
   width: 100%;
@@ -390,14 +393,19 @@ form input, form textarea{
   margin-bottom: 10px;
   box-sizing: border-box;
   resize: vertical;
+  border: none;
+  border-bottom: 2px solid #ffffff;
+  outline: none;
+  background: none;
 }
 form .sendbtn{
   background: #4CAF50;
   color: white;
   padding: 10px 15px;
-  margin-top: 5px;
+  margin-top: 2px;
   border: none;
   cursor: pointer;
+  border-radius: 20px;
 }
 form button:hover{
   background: green;
