--- a/style2.css
+++ b/style2.css
@@ -461,14 +461,14 @@ form button:hover{
         height: 210px;
     }
 
-    .listProduct .item:hover {
-        height: 300px;
-    }
 }
 
-@media only screen and (max-width: 429px) {
+@media only screen and (max-width: 430px) {
     .listProduct .item {
-        height: 200px;
+        height: 225px;
+    }
+    .listCart{
+        height: 390px;
     }
 }
 
