--- a/style2.css
+++ b/style2.css
@@ -434,7 +434,10 @@ form button:hover{
 
 @media only screen and (max-width: 1024px) {
     .listProduct {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(4, 1fr);
+    }
+    .listProduct .item {
+        height: 270px;
     }
 }
 
@@ -448,32 +451,37 @@ form button:hover{
 
 @media only screen and (max-width: 540px) {
     .listProduct {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(3, 1fr);
     }
 
     .listProduct .item {
-        height: 235px;
+        height: 230px;
     }
 }
 
 @media only screen and (max-width: 480px) {
+    .listProduct {
+        grid-template-columns: repeat(2, 1fr);
+    }
     .listProduct .item {
-        height: 210px;
+        height: 255px;
     }
 
 }
 
 @media only screen and (max-width: 430px) {
     .listProduct .item {
-        height: 225px;
+        height: 240px;
     }
     .listCart{
         height: 390px;
     }
 }
-
-@media only screen and (max-width: 418px) {
+@media only screen and (max-width: 380px) {
     .listProduct .item {
-        height: 200px;
+        height: 240px;
+    }
+    .listCart{
+        height: 390px;
     }
 }
